--- a/docs/pets/sleeping.mdx
+++ b/docs/pets/sleeping.mdx
@@ -15,5 +15,5 @@ Each pet requires **food/water**. Feeding is easy!
 ## Food and Treats
 
 
-<PetCard pet="Olympia" imagePath="@build/src/static/img/olympia.jpg" successMessage="Done">this is the content</PetCard>
+<PetCard pet="Olympia" imagePath="/img/olympia.jpg" successMessage="Done">this is the  content we came for</PetCard>
 
