React Components night 3

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,11 +1,11 @@
 ---
 sidebar_position: 0
 ---
+import PetCard from "@site/src/components/PetCard.js"
+
 # Scout's House
 
 The absolute most basic rules are these:
 1. Don't let Scoutie outside
 2. Make sure Scoutie can access her litterbox
-3. 
-
-
+3. Don't let the dogs have access Scoutie's litterbox
