--- a/docs/pets/pets.mdx
+++ b/docs/pets/pets.mdx
@@ -1,10 +1,10 @@
 ---
 Title: Pets
 ---
+import PetCard from '@site/src/components/PetCard.js';
 
 # Pets
 
-## [CJ](cj) 
 
 German Shepherd dogs
 10 years
@@ -12,10 +12,10 @@ German Shepherd dogs
 
 <FontAwesomeIcon icon="fa-solid fa-dog" />
 
-## [Olympia](olympia)
 
 Basenji mixed
 3 years
 
-## [Scout](scout)
+<PetCard pet="Olympia" imagePath="/img/olympia.jpg" successMessage="Done" breed="Basenji Mix" age="3 years">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </PetCard>
+
 
