update some content

--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -1,11 +1,11 @@
 ---
 sidebar_position: 0
 ---
-import PetCard from "@site/src/components/PetCard.js"
 
 # Scout's House
 
-The absolute most basic rules are these:
-1. Don't let Scoutie outside
-2. Make sure Scoutie can access her litterbox
-3. Don't let the dogs have access Scoutie's litterbox
+The most basic rules are these:
+1. Don't let Scoutie outside <i class="fa-solid fa-cat"></i>
+2. Make sure Scoutie can access her litterbox <i class="fa-solid fa-poo"></i>
+3. Don't let the dogs have access Scoutie's litterbox <i class="fa-solid fa-poop"></i>
+4. Don't leave dogs unnattended together in the backyard <i class="fa-solid fa-dog"></i>
