update docs content

--- a/docs/pets/olympia.mdx
+++ b/docs/pets/olympia.mdx
@@ -7,9 +7,25 @@ tags:
 
 # Olympia
 
-Olympia is our little monster that
+Our little monster was born September 2018. She makes funny sounds and can have a ton of energy. Just over 40 pounds of pure muscle, don't let her crash into your legs at top speed.
+
+## Backyard
+
+Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark. She doesn't really bark at anything else back there when she's by herself.
+
+## Inside
+
+While inside, Olympia rests in the window on top of the couch most of the time. She will often growl at passerbyers and bark at mail delivery people. She
+
+:::info Licking
+
+Try to stop her from licking the carpet and the couch. We aren't sure what the deal is but its gross.
+
+:::
 
 
 ## Sounds
 
-Scout's litterbox is in the bathroom, in a cupboard across from the shower. The cupboard door should always remain open, the bathroom door should stay open whenever its not in use. :point_up: Scout will usually visit the bathroom with you and eat, or just stand around with you
+Olympia loves to speak. Asking for treats is most common but she sometimes does it when excited. 
+
+
