--- a/docs/pets/templates.mdx
+++ b/docs/pets/templates.mdx
@@ -1,1 +1,11 @@
 export const Scoutiefood = () => <>Scoutie eats all the food</>
+
+
+
+// export const modules = () => {
+//     Routine: {
+//         CJ: 'Wake Up',
+//         Olympia: 'Party',
+//         Scout: 'Dance'
+//     }
+// } save this for typescript
