--- a/docs/pets/routine.mdx
+++ b/docs/pets/routine.mdx
@@ -4,9 +4,7 @@ sidebar_position: 2
 ---
 
 # Routine
-Each pet requires **food/water**, if you haven't seen it check out the feeding chart here
 
+Typical schedule for the dogs at our house: Bathroom at 8, 12, 5, and 8. Party between 5 and 8. Sleep the rest of the time
 
-
-## Food and Treats
 
