--- a/docs/pets/cj.mdx
+++ b/docs/pets/cj.mdx
@@ -9,11 +9,26 @@ tags:
 
 CJ was born July 20 2011 and been a part of Tayler's family since birth. His parents, Chato and Molia, were part of Tayler's grandparents family and also gave CJ two brothers and a sister who stayed in the family, and 5 others that went to other families.
 
+## Keywords
+Walk - CJ loves walking. He will start jumping around like a youngin when he thinks or knows your intention is to walk him. Be careful!
+Off - For when you need him to move off of whatever he's on. The couch or whatever
+No - He doesn't really listen to this one a lot
+Down = Lay Down
+Paw - for a paw, good before a treat or before putting his harness on
+Treat = treat
+*clicker sound - _treat incoming_
+
+
 :::important CJ is over 10 years old
 
 While his hips are in decent shape, his back is noticably an area of discomfort for him. Avoid situations where dogs attempt to mount him which hurts his back and can make CJ very upset.
 
 :::
+
+## Walking
+See Walking
+
+
 
 ## Barking
 
