--- a/docs/pets/routine.mdx
+++ b/docs/pets/routine.mdx
@@ -8,3 +8,23 @@ sidebar_position: 2
 Typical schedule for the dogs at our house: Bathroom at 8, 12, 5, and 8. Party between 5 and 8. Sleep the rest of the time
 
 
+# Walking
+## Together
+CJ is protective of his family. He has bitten people that have _not_ greeted us while they walk past. Not often, and not hard, but its scary enough.
+Together, they are both ready to fight other dogs (mostly Olympia but she will get CJ involved) and chase any cats. 
+
+Theres a loop in the front and back of the neck of their harness. We like to hook the leashes up to each dogs chest loop.
+
+:::info Leashes
+We have a double leash that makes it easy to walk two dogs at once. Its black, and has a squishy handle. Hook this up to each dog's harness to keep them together nicely. Otherwise, the black lease with two handles is best for CJ while the purple leash (also a waste belt) is best for Olympia.
+:::
+
+
+### CJ
+CJ gets the red harness, and black leash (if not using the double lease).
+When he knows your intention is to walk him he gets a little crazy.
+Great to walk on his own. He's so friendly and looooooves sniffing things
+
+### Olympia
+Olympias harness is Turquoise. We usually have an e-collar on her too for keeping her attention. No need to use it if you're not comfortable with it.
+When she knows your intention is to walk, she gets excited but doesn't want you to put the harness over her head. She still wants to walk!
