--- a/docs/pets/olympia.mdx
+++ b/docs/pets/olympia.mdx
@@ -9,6 +9,15 @@ tags:
 
 Our little monster was born September 2018. She makes funny sounds and can have a ton of energy. Just over 40 pounds of pure muscle, don't let her crash into your legs at top speed.
 
+## Keywords
+Off - When she needs to get off something, the couch, the bed, the rug, you.
+Outside = Backyard, for the bathroom
+Inside - to get back inside from being outside
+Treat = treat
+Boney? = excellent treat (Wait for the Woo sounds)
+No - for stopping whatever she's doing
+
+
 ## Backyard
 
 Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark. She doesn't really bark at anything else back there when she's by herself.
