--- a/docs/pets/sleeping.mdx
+++ b/docs/pets/sleeping.mdx
@@ -9,10 +9,10 @@ I can write **Markdown** alongside my _JSX_!
 
 # Nighttime with the pets
 
-Each pet requires **food/water**. Feeding is easy!
+Dogs should prefer to sleep in the master bedroom. They know its not playtime in there at least. All that matters is they aren't allowed to roam the house overnight. It could be beneficial to turn on the sound machine (white capsuly thing on head of bed) in the bedroom so they aren't disturbing your sleep with barks
 
+## Scout
 
-## Food and Treats
-
+We suspect that Scoutie attempts to sleep with our guests when we aren't home. She usually sleeps in the hammock outside our bedroom door at night. When it's very hot, you might finder he sleeping in the bathroom sink.
 
 
