--- a/docs/pets/olympia.mdx
+++ b/docs/pets/olympia.mdx
@@ -10,21 +10,24 @@ tags:
 Our little monster was born September 2018. She makes funny sounds and can have a ton of energy. Just over 40 pounds of pure muscle, don't let her crash into your legs at top speed.
 
 ## Keywords
-Off - When she needs to get off something, the couch, the bed, the rug, you.
-Outside = Backyard, for the bathroom
-Inside - to get back inside from being outside
-Treat = treat
-Boney? = excellent treat (Wait for the Woo sounds)
-No - for stopping whatever she's doing
+*Off* - When she needs to get off something, the couch, the bed, the rug, you.
+*Outside* = Backyard, for the bathroom
+*Inside* - to get back inside from being outside
+*Treat* = treat
+*Boney?* = excellent treat (Wait for the Woo sounds)
+*No* - for stopping whatever she's doing
+*Go to bed*/*bedzo* - Time to go to the bedroom for sleep
 
 
 ## Backyard
 
-Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark. She doesn't really bark at anything else back there when she's by herself.
+Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark <i class="fa-solid fa-bullhorn"></i> . She doesn't really bark at anything else back there when she's by herself.
+
+Ask Olympia inside by saying "Inside!"
 
 ## Inside
 
-While inside, Olympia rests in the window on top of the couch most of the time. She will often growl at passerbyers and bark at mail delivery people. She
+While inside, Olympia rests in the window on top of the couch most of the time. She will often growl at passerbyers and bark at mail delivery people. Most often, she sleeps in a little ball on the couch
 
 :::info Licking
 
