--- a/blog/2021-08-01-mdx-blog-post.mdx
+++ b/blog/2021-08-01-mdx-blog-post.mdx
@@ -1,7 +1,7 @@
 ---
 slug: mdx-blog-post
 title: MDX Blog Post
-authors: [slorber]
+authors: [mikey, tayler, cj, olympia, scout]
 tags: [docusaurus]
 ---
 
