--- a/docs/pets/pets.mdx
+++ b/docs/pets/pets.mdx
@@ -1,15 +1,8 @@
 ---
 Title: Pets
 ---
-import PetCard from '@site/src/components/PetCard.js'
-import styles from '@site/src/components/styles.module.css'
+import AllPets from '@site/src/components/AllPets.js'
 
+# Pets
 
-
-<div className={styles.container}>
-<PetCard pet="Olympia" imagePath="/img/olympia.jpg" successMessage="Done" breed="Basenji Mix" age="3 years" style={{minWidth: '10px'}}>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </PetCard>
-<PetCard pet="Olympia" imagePath="/img/olympia.jpg" successMessage="Done" breed="Basenji Mix" age="3 years">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </PetCard>
-<PetCard pet="Olympia" imagePath="/img/olympia.jpg" successMessage="Done" breed="Basenji Mix" age="3 years">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </PetCard>
-
-
-</div>
+<AllPets />
