--- a/docs/pets/olympia.mdx
+++ b/docs/pets/olympia.mdx
@@ -10,13 +10,13 @@ tags:
 Our little monster was born September 2018. She makes funny sounds and can have a ton of energy. Just over 40 pounds of pure muscle, don't let her crash into your legs at top speed.
 
 ## Keywords
-*Off* - When she needs to get off something, the couch, the bed, the rug, you.
-*Outside* = Backyard, for the bathroom
-*Inside* - to get back inside from being outside
-*Treat* = treat
-*Boney?* = excellent treat (Wait for the Woo sounds)
-*No* - for stopping whatever she's doing
-*Go to bed*/*bedzo* - Time to go to the bedroom for sleep
+- **Off** - When she needs to get off something, the couch, the bed, the rug, you.
+- **Outside** = Backyard, for the bathroom
+- **Inside** - to get back inside from being outside
+- **Treat** = treat
+- **Boney?** = excellent treat (Wait for the Woo sounds)
+- **No** - for stopping whatever she's doing
+- **Go to bed**/**bedzo** - Time to go to the bedroom for sleep
 
 
 ## Backyard
