--- a/docs/pets/sleeping.mdx
+++ b/docs/pets/sleeping.mdx
@@ -7,6 +7,8 @@ tags:
 
 # Nighttime with the pets
 
+
+## Dogs
 Dogs should prefer to sleep in the master bedroom. They know its not playtime in there at least. All that matters is they aren't allowed to roam the house overnight. 
 
 :::note 
