--- a/docs/pets/feeding.mdx
+++ b/docs/pets/feeding.mdx
@@ -42,7 +42,7 @@ One treat per day is for helping keep CJ feel young. Split a treat in half so th
 ### Ear Stuff
 :::note Dynomax
 
-lorum ipsum
+If the dogs are needing their ears cleaned because they keep trying to fly away. Not typical that you'll need to use this.
 
 :::
 
