--- a/docs/pets/sleeping.mdx
+++ b/docs/pets/sleeping.mdx
@@ -9,7 +9,7 @@ tags:
 
 
 ## Dogs
-Dogs should prefer to sleep in the master bedroom. They know its not playtime in there at least. All that matters is they aren't allowed to roam the house overnight. 
+Dogs should prefer to sleep in the master bedroom. They know its not playtime in there at least. All that matters is they aren't allowed to roam the house overnight. Keep them in the room by placing the gate in front of the door
 
 :::note 
 It could be beneficial to turn on the sound machine (white capsuly thing on head of bed) in the bedroom so they aren't disturbing your sleep with barks
