--- a/docs/pets/olympia.mdx
+++ b/docs/pets/olympia.mdx
@@ -1,6 +1,6 @@
 ---
 sidebar_label: About Olympia
-sidebar_position: 4
+sidebar_position: 5
 tags:
  - Olympia
 ---
@@ -10,6 +10,9 @@ tags:
 Our little monster was born September 2018. She makes funny sounds and can have a ton of energy. Just over 40 pounds of pure muscle, don't let her crash into your legs at top speed.
 
 ## Keywords
+
+Not only does Olympia understand several words that we say, she also sometimes says a few words to us with her buttons! Keep your ears open for her asking to go Outside.
+
 - **Off** - When she needs to get off something, the couch, the bed, the rug, you.
 - **Outside** = Backyard, for the bathroom
 - **Inside** - to get back inside from being outside
