--- a/docs/pets/routine.mdx
+++ b/docs/pets/routine.mdx
@@ -11,7 +11,7 @@ tags:
 # Routine
 
 ## Daytime
-Typical schedule for the dogs at our house: 
+Typical schedule for the dogs at our house (but is by no means a hard schedule): 
 - Bathroom at 8am, 12pm, 5pm, and 8pm. 
 - Party between 5pm and 8pm. Sleep the rest of the time
 
