--- a/docs/pets/feeding.mdx
+++ b/docs/pets/feeding.mdx
@@ -18,10 +18,10 @@ Each pet requires **food/water**. Feeding is easy!
 | **Quirks**    | Food is in the bathroom. | Eats while laying down. Paws food bowl for food. | Sneaks food from CJ's bowl. Also tries to sneak cat poops[^1]. Generally looks uncomfortable while eating. Will eat from puzzles too.| 
 | **Treats**    |Only eats treats from a flat surface|Treats as needed and for fun|Treats as needed and for fun[^2]. Loves a Kong with treats but needs to be contained to something safe for slobber |
 | **Allergies** | None | None | None |
+| **Medicines** | None | [Dynomax](#cjs-old-man-treats), 1 per day | None |
 
-
-[^1]:See [bathroom](/docs/pets/scout#litterbox)
-[^2]:Will howl for treats!
+[^2]:See [bathroom](/docs/pets/scout#litterbox)
+[^1]:Will howl for treats!
 
 :::tip 
 Our dogs are notorious for not eating or finishing their meals at the expected times. They may eat less than expected while their parents are out of home.
