remove titles from display

--- a/docs/pets/pets.mdx
+++ b/docs/pets/pets.mdx
@@ -1,8 +1,26 @@
 ---
 Title: Pets
+hide_title: true
 ---
-import AllPets from '@site/src/components/AllPets.js'
+import PetFacts from '@site/src/components/PetFacts.js';
 
 # Pets
 
-<AllPets />
+<PetFacts cj={[
+        "Walks",
+        "Treats",
+        "Sniffing",
+        "Car rides"
+        ]}     olympia={[
+        "Making noises",
+        "Cuddling",
+        "Running fast"
+        ]}     scout={[
+        "Chasing zipties",
+        "Sleeping",
+        "Eating",
+        "Open doors"
+        ]}>
+        Most Favorite things: 
+
+ </PetFacts>
