update some info, change the card styles

--- a/docs/emergency.mdx
+++ b/docs/emergency.mdx
@@ -2,7 +2,7 @@
 sidebar_label: Emergencies
 sidebar_position: 99
 tags:
-- emergency
+  - emergency
 
 hide_title: true
 ---
@@ -17,6 +17,16 @@ Cascade Animal Clinic - literally right down the street, but probably closed
 
 Q-Street emergency clinic - very close and 24 hours
 
+## Scout Missing?
+
+Places to check:
+
+- Under the kitchen table
+- Under the desks in living room
+- In the cardboard train next to piano
+- Under the guest room bed
+- In the bathtub
+- Under the back of the master bedroom
 
 :::info If your thinking more of a cleanup emergency
 
