--- a/docs/emergency.mdx
+++ b/docs/emergency.mdx
@@ -28,8 +28,5 @@ Places to check:
 - In the bathtub
 - Under the back of the master bedroom
 
-:::info If your thinking more of a cleanup emergency
-
-See [Accidents](/docs/house/accidents)
-
+:::info [Looking for Accidents?](/docs/house/accidents)
 :::
