--- a/docs/house/accidents.mdx
+++ b/docs/house/accidents.mdx
@@ -2,8 +2,6 @@
 sidebar_position: 1
 title: Accidents
 hide_title: true
-
-
 ---
 
 # Pet Accidents
@@ -11,3 +9,6 @@ hide_title: true
 On rare occassions the pets may have an accident. Carpet cleaning stuff is under the sink and there is usually a pile of towels above the washer machine for dirtier cleanups. There are also gloves and scrubbers under the kitchen sink if needed.
 
 The guest bed is pretty tough and can handle a good cleaning too if needed. Scout has made an accident on that bed just once in the past. We will take care of any deep cleaning that might come up, just let us know about it!
+
+:::info [Looking for Emergencies?](/docs/emergency)
+:::
