--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -5,6 +5,5 @@ title: The Basics
 
 1. Don't let Scoutie outside <i class="fa-solid fa-cat"></i>
 2. Make sure Scoutie can access her litterbox <i class="fa-solid fa-poo"></i>
-3. Don't let the dogs have access Scoutie's litterbox <i class="fa-solid fa-poop"></i> - Keep the hallway gate closed at all times
+3. Don't let the dogs have access Scoutie's litterbox <i class="fa-solid fa-poop"></i> - Keep the hallway gate closed at all times when away
 4. Don't leave dogs unnattended together in the backyard <i class="fa-solid fa-dog"></i>
-
