--- a/docs/pets/feeding.mdx
+++ b/docs/pets/feeding.mdx
@@ -9,31 +9,30 @@ hide_title: true
 
 Each pet requires **food/water**. Feeding is easy!
 
-
 ## Food and Treats
 
-|               | Scout         | CJ                | Olympia           |
-| ------------: | ------------- | ----------------- | ----------------- |
-| **Amount**    | Self feeding  | 4 cups per day    | 3 cups per day    |
-| **Frequency** | Self feeding  | Morning and evening | Morning and evening |
-| **Quirks**    | Food is in the bathroom. | Eats while laying down. Paws food bowl for food. | Sneaks food from CJ's bowl. Also tries to sneak cat poops[^1]. Generally looks uncomfortable while eating. Will eat from puzzles too.| 
-| **Treats**    |Only eats treats from a flat surface|Treats as needed and for fun|Treats as needed and for fun[^2]. Loves a Kong with treats but needs to be contained to something safe for slobber |
-| **Allergies** | None | None | None |
-| **Medicines** | None | [Dynomax](#cjs-old-man-treats), 1 per day | None |
+|               | Scout                                | CJ                                                                            | Olympia                                                                                                                               |
+| ------------: | ------------------------------------ | ----------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------- |
+|    **Amount** | Self feeding                         | 3 cups per day                                                                | 1.5 cups per day                                                                                                                      |
+| **Frequency** | Self feeding                         | Morning and evening                                                           | Morning and evening                                                                                                                   |
+|    **Quirks** | Food is in the bathroom.             | Eats while laying down. Paws food bowl for food.                              | Sneaks food from CJ's bowl. Also tries to sneak cat poops[^1]. Generally looks uncomfortable while eating. Will eat from puzzles too. |
+|    **Treats** | Only eats treats from a flat surface | Treats as needed and for fun                                                  | Treats as needed and for fun[^2]. Loves a Kong with treats but needs to be contained to something safe for slobber                    |
+| **Allergies** | None                                 | None                                                                          | None                                                                                                                                  |
+| **Medicines** | None                                 | [Dynomax](#cjs-old-man-treats), 1 per day. Easier to feed when broken in half | None                                                                                                                                  |
 
-[^2]:See [bathroom](/docs/pets/scout#litterbox)
-[^1]:Will howl for treats!
+[^2]: See [bathroom](/docs/pets/scout#litterbox)
+[^1]: Will howl for treats!
 
-:::tip 
+:::tip
 Our dogs are notorious for not eating or finishing their meals at the expected times. They may eat less than expected while their parents are out of home.
 :::
 
-
-
 ## Medicine
+
 Various issues come up on various occassions
-    
+
 ### CJ's Old Man treats
+
 :::note Dynomax
 
 One treat per day is for helping keep CJ feel young. Split a treat in half so that he actually eats them. Routinely, we give them to him in the afternoon but anytime once per day is ok
@@ -41,9 +40,17 @@ One treat per day is for helping keep CJ feel young. Split a treat in half so th
 :::
 
 ### Ear Stuff
+
 :::note Dynomax
 
 If the dogs are needing their ears cleaned because they keep trying to fly away. Not typical that you'll need to use this.
 
 :::
 
+### Heartworm medicine
+
+:::note Heartguard
+
+On the 2nd of every month, we have an Alexa alarm reminding us to give the dogs medicine. Heartguard is in their snackbar thing. If you give this to them, mark it off. Don't feel bad if you miss it, we will catch it!
+
+:::
