--- a/docs/pets/feeding.mdx
+++ b/docs/pets/feeding.mdx
@@ -13,8 +13,8 @@ Each pet requires **food/water**. Feeding is easy!
 
 |               | Scout                                | CJ                                                                            | Olympia                                                                                                                               |
 | ------------: | ------------------------------------ | ----------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------- |
-|    **Amount** | Self feeding                         | 2ish cups per day                                                             | 1.5 cups per day                                                                                                                      |
-| **Frequency** | Self feeding                         | Morning and evening                                                           | Morning and evening                                                                                                                   |
+|    **Amount** | Self feeding                        <3ish cups per day                                                             | <2ish cups per day                                                                                                                      |
+| **Frequency** | Self feeding (1ish cup per day)                         | Morning and evening                                                           | Morning and evening                                                                                                                   |
 |    **Quirks** | Food is in the bathroom.             | Eats while laying down. Paws food bowl for food.                              | Sneaks food from CJ's bowl. Also tries to sneak cat poops[^1]. Generally looks uncomfortable while eating. Will eat from puzzles too. |
 |    **Treats** | Only eats treats from a flat surface | Treats as needed and for fun                                                  | Treats as needed and for fun[^2]. Loves a Kong with treats but needs to be contained to something safe for slobber                    |
 | **Allergies** | None                                 | None                                                                          | None                                                                                                                                  |
