update for new address

--- a/docs/emergency.mdx
+++ b/docs/emergency.mdx
@@ -9,24 +9,29 @@ hide_title: true
 
 # In case of Emergency
 
-Care Credit Card available in the desk drawer for pet emergencies <i class="fa-solid fa-cat"></i>
+There are several Credit Cards available in the desk drawer for pet emergencies <i class="fa-solid fa-cat"></i>
+The REI card is the best for emergencies, but the others are available if needed.
 
 ## Vet Information
 
-Cascade Animal Clinic - literally right down the street, but probably closed
+Oregon vets with the pet info:
+Cascade Animal Clinic - 541-343-8794
 
-Q-Street emergency clinic - very close and 24 hours
+Berkeley Dog and Cat Hospital - 510-848-5041
+Address: 2126 Haste St, Berkeley, CA 94704
+
+
 
 ## Scout Missing?
 
 Places to check:
 
-- Under the kitchen table
-- Under the desks in living room
-- In the cardboard train next to piano
-- Under the guest room bed
+- Under the desks in office
+- Behind the Piano
+- Under the guest room bed (behind it)
 - In the bathtub
-- Under the back of the master bedroom
+- In a closet
+- Behind the TV
 
 :::info [Looking for Accidents?](/docs/house/accidents)
 :::
