--- a/docs/house/accidents.mdx
+++ b/docs/house/accidents.mdx
@@ -6,9 +6,11 @@ hide_title: true
 
 # Pet Accidents
 
-On rare occassions the pets may have an accident. Carpet cleaning stuff is under the sink and there is usually a pile of towels above the washer machine for dirtier cleanups. There are also gloves and scrubbers under the kitchen sink if needed.
+On rare occassions the pets may have an accident. Carpet cleaning stuff is under the sink in the family room and there is usually a pile of towels above the washer machine for dirtier cleanups. There are also gloves and scrubbers under the kitchen sink if needed.
 
-The guest bed is pretty tough and can handle a good cleaning too if needed. Scout has made an accident on that bed just once in the past. We will take care of any deep cleaning that might come up, just let us know about it!
+We can take care of any deep cleaning that might come up, just let us know about it as soon as you are aware of it!
+
+We also have a Green Machine carpet cleaner that you can use if you need to. It floats around the house, but is usually in the front rooms. There is already pet cleanup formula in there probably; there is more under a sink if needed. It is pretty easy to use, but if you have any questions, just ask!
 
 :::info [Looking for Emergencies?](/docs/emergency)
 :::
