--- a/docs/house/after.mdx
+++ b/docs/house/after.mdx
@@ -11,8 +11,8 @@ hide_title: true
 
 ### Guest Room
 
-Generally, the bed in the guest room is folded back up to couch mode. Unless you hear otherwise from us, there is no need to make up the bed after your stay. 
+Unless you hear otherwise from us, there is no need to make up the bed after your stay. We will wash the sheets and put them whereever they should be.
 
 ### Gate
 
-Make sure the hallway gate is closed and that the dogs are on the kitchen side of the gate so they aren't roaming the hallway and bathroom.
+Make sure the laundry room gate is closed and that the dogs can't access the litter box.
