--- a/docs/human-care/technology.mdx
+++ b/docs/human-care/technology.mdx
@@ -3,6 +3,14 @@ sidebar_label: Technology
 sidebar_position: 4
 hide_title: true
 ---
+import WifiQRCode, {WifiAsText} from '@site/src/components/WifiQRCode'
+const wifi = {
+  ssid: 'NetworkNotFound_Guest',
+  password: 'OlympiaHub'
+}
+
+
+
 
 # Technology
 
@@ -10,27 +18,15 @@ We have all sorts of stuff connected to internet in the house!
 
 ## Internet / Wifi
 
-<div class="item shadow--lw" style={{float:'right'}}>
-    <img
-    src={require('../../static/img/qrcode.png').default}
-    alt="QR Code to join wifi"
-    height="250vw"
-    width="250vw"
-    href='WIFI%3AT%3AWPA%3BS%3Anetworknotfound%3BP%3Acjtetonscout16%3BH%3A%3B'
-    name='WifiQR'
-    />
-    <br/>
-    <label for='WifiQR' style={{marginLeft:'auto', marginRight:'auto', fontSize:'12px' }}>Scan/screenshot for house wifi</label>
-</div>
+Scan to connect to wifi
 
 There are computers in the house, but they are off-limits and password protected. Our wifi speeds are pretty good and you should be able to even find a loose ethernet cable on the right desk. Scan or Screenshot this code to get connected to the wifi.
+<WifiQRCode ssid={wifi.ssid} password={wifi.password} />
 
-Otherwise, heres the creds you need:
 
-`networknotfound` <br/>
-`cjtetonscout16`
 
 Feel free to clear some desk space for yourself if you need
+
 
 ## Alexa
 
@@ -40,7 +36,7 @@ There are 4 devices in the house:
 
 - Living room
 - Kitchen
-- Guest bedroom
+- Office
 - Master bedroom
 
 :::note Common commands
