--- a/docs/pets/cj.mdx
+++ b/docs/pets/cj.mdx
@@ -30,6 +30,7 @@ While his hips are in decent shape, his back is noticably an area of discomfort 
 - Walks
 - Treats
 - Sniffs
+- Following humans
 
 ## Barking
 
@@ -37,8 +38,8 @@ While his hips are in decent shape, his back is noticably an area of discomfort 
 <i class="fa-solid fa-triangle-exclamation"></i> We do not let CJ outside at the same time as Olympia unnattended because they are much harder to control while both outside, especially when they getting into barking fights with the neighbor dogs.
 
 CJ has two primary types of barking habits in the backyard. 
-1. The one where he barks at the neighbor dogs and sounds scary. The neighbor dogs bark back but it's hard to reel CJ back in sometimes when he gets in this position.
-2. The other is his bark to tell the neighborhood he is outside. He usually does that from the concrete slab out the backdoor. He doesn't mean too much harm by it but it can get the neighbor dogs up and start barking back.
+1. The one where he barks at the neighbor dogs and sounds scary. 
+2. The other is to bark into the wind; letting everyone know he's awake. He's just weird.
 
 ### Inside
 CJ is actually really good about not looking for things to bark at while inside. He will begin barking when someone knocks at the door and can look very agressive to anyone who is at the door. He also barks when Olympia begins any sort of barking noises. Even if Olympia isn't barking at anything
