--- a/docs/pets/olympia.mdx
+++ b/docs/pets/olympia.mdx
@@ -8,7 +8,7 @@ hide_title: true
 
 # Olympia
 
-Our little monster was born September 2018. She makes funny sounds and can have a ton of energy. Just over 40 pounds of pure muscle, don't let her crash into your legs at top speed.
+Our little monster was born September 2018. She makes funny sounds and can have a ton of energy. Just over 45 pounds of pure muscle, don't let her crash into your legs at top speed.
 
 ## Keywords
 
@@ -25,13 +25,13 @@ Not only does Olympia understand several words that we say, she also sometimes s
 
 ## Backyard
 
-Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark <i class="fa-solid fa-bullhorn"></i> . She doesn't really bark at anything else back there when she's by herself.
+Olympia is great in the backyard by herself. She will let you know when she wants to come back in with a single lout bark <i class="fa-solid fa-bullhorn"></i> . She doesn't really bark at anything else back there when she's by herself. She will likely just lay in the sun for a while until she gets bored.
 
 Ask Olympia inside by saying "Inside!"
 
 ## Inside
 
-While inside, Olympia rests in the window on top of the couch most of the time. She will often growl at passerbyers and bark at mail delivery people. Most often, she sleeps in a little ball on the couch
+While inside, Olympia follows around the humans and asks to go outside. Most often, while inside, she sleeps in a little ball near wherever you are.
 
 :::info Licking
 
