--- a/docs/pets/routine.mdx
+++ b/docs/pets/routine.mdx
@@ -19,7 +19,7 @@ Typical schedule for the dogs at our house (but is by no means a hard schedule):
 
 ## Walking
 ### Together
-Together, they are both ready to bark at other dogs (mostly Olympia but she will get CJ involved) and chase any cats. 
+Together, they are both ready to bark at other dogs (mostly Olympia but she will get CJ involved) and chase any cats. CJ can't keep up with the lengths Olympia would go, especially when its warm out.
 
 
 :::note Leashes
@@ -35,6 +35,7 @@ CJ *LOVES* walking. It's his favorite thing. He loves to sniff all the things an
 CJ gets the red harness, and black leash (if not using the double lease).
 When he knows your intention is to walk him he gets a little crazy.
 Great to walk on his own. He's so friendly and looooooves sniffing things
+Pretty much guarenteed to poop while walking.
 
 :::warning 
 CJ has bitten people that have _not_ greeted us while they walk past. Not often, and not hard, but its scary enough.
@@ -42,4 +43,4 @@ CJ has bitten people that have _not_ greeted us while they walk past. Not often,
 
 ### Olympia
 Olympias harness is Turquoise. We usually have an e-collar on her too for keeping her attention. No need to use it if you're not comfortable with it.
-When she knows your intention is to walk, she gets excited but doesn't want you to put the harness over her head. She still wants to walk!
+When she knows your intention is to walk, she gets excited but doesn't want you to put the harness over her head. She still wants to walk! She usually wants to go into the backyard to pee immediately after a walk if she didn't go while out.
