--- a/docs/pets/sleeping.mdx
+++ b/docs/pets/sleeping.mdx
@@ -10,14 +10,14 @@ hide_title: true
 
 
 ## Dogs
-Dogs should prefer to sleep in the master bedroom. They know its not playtime in there at least. All that matters is they aren't allowed to roam the house overnight. Keep them in the room by placing the gate in front of the door
+Dogs should prefer to sleep in the master bedroom. They know its not playtime in there at least. Feel free to put a gate in front of the doorway if you want to lock them up. They don't mind. There is a water bowl (that probably needs filling) in the master bathroom for them.
 
 :::note 
-It could be beneficial to turn on the sound machine (white capsuly thing on head of bed) in the bedroom so they aren't disturbing your sleep with barks
+It could be beneficial to turn on the sound machine (white capsuly thing next to the bed) in the bedroom so they sleep better
 :::
 
 ## Scout
 
-We suspect that Scoutie attempts to sleep with our guests when we aren't home. She usually sleeps in the hammock outside our bedroom door at night. When it's very hot, you might finder he sleeping in the bathroom sink.
+We suspect that Scoutie attempts to sleep with our guests when we aren't home. We aren't really sure where she sleeps these days overnight. Let us know!
 
 
