--- a/docs/pets/feeding.mdx
+++ b/docs/pets/feeding.mdx
@@ -11,31 +11,38 @@ Each pet requires **food/water**. Feeding is easy!
 
 ## Food and Treats
 
-|               | Scout                                | CJ                                                                            | Olympia                                                                                                                               |
-| ------------: | ------------------------------------ | ----------------------------------------------------------------------------- | ------------------------------------------------------------------------------------------------------------------------------------- |
-|    **Amount** | Self feeding                        <3ish cups per day                                                             | <2ish cups per day                                                                                                                      |
-| **Frequency** | Self feeding (1ish cup per day)                         | Morning and evening                                                           | Morning and evening                                                                                                                   |
-|    **Quirks** | Food is in the bathroom.             | Eats while laying down. Paws food bowl for food.                              | Sneaks food from CJ's bowl. Also tries to sneak cat poops[^1]. Generally looks uncomfortable while eating. Will eat from puzzles too. |
-|    **Treats** | Only eats treats from a flat surface | Treats as needed and for fun                                                  | Treats as needed and for fun[^2]. Loves a Kong with treats but needs to be contained to something safe for slobber                    |
-| **Allergies** | None                                 | None                                                                          | None                                                                                                                                  |
-| **Medicines** | None                                 | [Dynomax](#cjs-old-man-treats), 1 per day. Easier to feed when broken in half | None                                                                                                                                  |
+|               | Scout         | CJ                    |    Olympia     |
+| ------------: | --- | --- | ---------------------------------- |
+|    **Amount** | 1/2 cup per day | 2 cups per day  | 1 cups per day           |
+| **Frequency** | Morning and evening     (she will wake you up at 3am if you forget)                    | Morning and evening                 | Morning and evening            |
+|    **Quirks** | Food and bowl is in the gym   | Eats while laying down often. Rings his food bowl like a bell for when hungry, but sometimes for fun.  | Sneaks food from CJ's bowl. Also tries to sneak cat poops[^1]. Generally looks uncomfortable while eating. Will eat from puzzles too. |
+|    **Treats** | Only eats treats from a flat surface | Treats as needed and for fun      | Treats as needed and for fun[^2].        |
+| **Allergies** | None    | None   |  None   |
+| **Medicines** | None   | [Dynomax](#cjs-old-man-treats), 1 per breakfast. Easier to feed when broken up a bit. Carprofen, 50mg each meal (break pills in half) | None |
 
 [^2]: See [bathroom](/docs/pets/scout#litterbox)
 [^1]: Will howl for treats!
 
 :::tip
 Our dogs are notorious for not eating or finishing their meals at the expected times. They may eat less than expected while their parents are out of home.
+Add some Stella powder to make it more appealing to them
 :::
 
 ## Medicine
 
-Various issues come up on various occassions
+Various issues come up on various occassions. Carprofen and Dynomax on a daily basis. Heartguard on the 2nd of every month. Bravecto every 12 weeks. All details below
 
 ### CJ's Old Man treats
 
 :::note Dynomax
 
 One treat per day is for helping keep CJ feel young. Split a treat in half so that he actually eats them. Routinely, we give them to him in the afternoon but anytime once per day is ok
+
+:::
+
+:::note Carprofen
+
+This is kind of a pain medicine. Helps CJ stay healthy/active. 50mg per meal, so 100mg per day. 
 
 :::
 
@@ -52,5 +59,11 @@ If the dogs are needing their ears cleaned because they keep trying to fly away.
 :::note Heartguard
 
 On the 2nd of every month, we have an Alexa alarm reminding us to give the dogs medicine. Heartguard is in their snackbar thing. If you give this to them, mark it off. Don't feel bad if you miss it, we will catch it!
+
+:::
+
+:::note Bravecto
+
+This is flea medicine. Both dogs get it when it comes in through Chewy. It's an easy chewable treat. Just make sure each dog gets the right dosage size. None for Scoutie at this time.
 
 :::
