--- a/docs/pets/scout.mdx
+++ b/docs/pets/scout.mdx
@@ -8,29 +8,26 @@ hide_title: true
 
 # Scout
 
-Scout is our little princess cat. She is very social, but very shy around dogs, especially around dogs that she doesn't live with. 
+Scout is our little princess cat. She is pretty social, but usually shy around dogs, especially around dogs that she doesn't live with. 
 
 :::important Scout is 100% an indoor cat
 
-When the weather is nice, and given the opportunity, she will sneak out of the back screen door and either eat grass under the kitchen window, or hide in the shed. Please don't leave her outside. She doesn't know how to fend for herself
+When the weather is nice, and given the opportunity, she will sneak out of the back door and either eat grass. Please don't leave her outside. She doesn't know how to fend for herself
 
 :::
 
 ## Litterbox
 
-Scout's litterbox is in the bathroom, in a cupboard across from the shower. The cupboard door should always remain open, the bathroom door should stay open whenever its not in use. 
-
-Use the littergenie to dispose of her poops, or a trashbag.
+Scout's litterbox is in the laundry room.
+Use the littergenie to dispose of her poops, or a trashbag. She will poop on the carpet if theres too much poop in the litterbox, and then she will blame the dogs for it.
 
 ## Routine
 
-Most days Scoutie just lays around in her favorite spots and eats. Expect her to attempt to join you in the bathroom whenever possible.
-
-:point_up: Scout will usually visit the bathroom with you and eat, or just stand around with you
+Most days Scoutie just lays around in her favorite spots and eats. She will bug you if she is hungry and she bites if she gets too many pets. 
 
 ### Lounging
 
-Most of the time, she is found in her cat tree in the kitchen, or the guest room bed
+Most of the time, she is found in her cat tree, or in the gym, near to her food. 
 
 ### Avoiding confrontation
 
