--- a/docs/human-care/technology.mdx
+++ b/docs/human-care/technology.mdx
@@ -5,8 +5,8 @@ hide_title: true
 ---
 import WifiQRCode, {WifiAsText} from '@site/src/components/WifiQRCode'
 const wifi = {
-  ssid: 'NetworkNotFound_Guest',
-  password: 'OlympiaHub'
+  ssid: 'NetworkNotFound',
+  password: 'cjtetonscout16'
 }
 
 
