Update pet care instructions and homepage features

--- a/docs/house/accidents.mdx
+++ b/docs/house/accidents.mdx
@@ -6,11 +6,13 @@ hide_title: true
 
 # Pet Accidents
 
-On rare occassions the pets may have an accident. Carpet cleaning stuff is under the sink in the family room and there is usually a pile of towels above the washer machine for dirtier cleanups. There are also gloves and scrubbers under the kitchen sink if needed.
+On occassion the pets (mostly CJ) may have an accident. 
 
-We can take care of any deep cleaning that might come up, just let us know about it as soon as you are aware of it!
+We have a Green Machine carpet cleaner that you can use if you need to. It floats around the house, but is usually family room near the fireplace. There is already pet cleanup formula in there probably; there is more under a sink if needed. It is pretty easy to use, but if you have any questions, just ask!
 
-We also have a Green Machine carpet cleaner that you can use if you need to. It floats around the house, but is usually in the front rooms. There is already pet cleanup formula in there probably; there is more under a sink if needed. It is pretty easy to use, but if you have any questions, just ask!
+We recommend using that to vaccuum up any liquid first, then using the trigger on the vaccuum to spray cleaning spray on the area, then using the vaccuum again to suck up the cleaning spray.
+
+Towels above the washer/dryer are dedicated to pets and their messes.
 
 :::info [Looking for Emergencies?](/docs/emergency)
 :::
