--- a/docs/intro.mdx
+++ b/docs/intro.mdx
@@ -3,7 +3,19 @@ sidebar_position: 0
 title: The Basics
 ---
 
-1. Don't let Scoutie outside <i class="fa-solid fa-cat"></i>
-2. Make sure Scoutie can access her litterbox <i class="fa-solid fa-poo"></i>
-3. Don't let the dogs have access Scoutie's litterbox <i class="fa-solid fa-poop"></i>
-4. Don't leave dogs unnattended together in the backyard <i class="fa-solid fa-dog"></i>
+<ol>
+<li>
+  Don't let Scoutie outside <i class="fa-solid fa-cat"></i>
+</li>
+<li>
+  Make sure Scoutie can access her litterbox{' '}
+  <i class="fa-solid fa-poo"></i>
+</li>
+<li>
+  Don't let the dogs have access Scoutie's litterbox{' '}
+  <i class="fa-solid fa-poop"></i>
+</li>
+<li>
+  Keep CJs heart rate down <i class="fa-solid fa-heart"></i>
+</li>
+</ol>
