--- a/docs/pets/cj.mdx
+++ b/docs/pets/cj.mdx
@@ -8,10 +8,10 @@ hide_title: true
 
 # CJ
 
-CJ was born July 20 2011 and been a part of Tayler's family since birth. His parents, Chato and Molia, were part of Tayler's grandparents family and also gave CJ two brothers and a sister who stayed in the family, and 5 others that went to other families.
+CJ was born July 20 2011 and been a part of Tayler's family since birth. His parents, Chato and Molia, were part of Tayler's grandparents family and also gave CJ two brothers and a sister who stayed in the family, and 5 others that went to other families. He can't hear well anymore
 
 ## Keywords
-- **Walk** - CJ loves walking. He will start jumping around like a youngin when he thinks or knows your intention is to walk him. Be careful!
+- **Walk** - CJ loves walking. He will start jumping around like a youngin when he thinks or knows your intention is to walk him. Be careful he doesn't hurt himself!
 - **Off** - For when you need him to move off of whatever he's on. The couch or whatever
 - **No** - He doesn't really listen to this one a lot
 - **Down** = Lay Down
@@ -20,26 +20,27 @@ CJ was born July 20 2011 and been a part of Tayler's family since birth. His par
 - ***clicker sound** - _treat incoming_
 
 
-:::important CJ is over 10 years old
+:::important CJ is a senior
 
 While his hips are in decent shape, his back is noticably an area of discomfort for him. Avoid situations where dogs attempt to mount him which hurts his back and can make CJ very upset.
+He also can't hear very well.
 
 :::
+
+We have experienced a few incidents with CJ during a strenous activity where he sat or laid down and yelped very loudly for about a minute. It usually starts with him raising a paw and then laying down. Shouldn't have to worry about this unless you're going on a hike or to the beach. 
 
 ## Favorite things
 - Walks
 - Treats
 - Sniffs
-- Following humans
+- Following his humans
 
 ## Barking
 
 ### Backyard
-<i class="fa-solid fa-triangle-exclamation"></i> We do not let CJ outside at the same time as Olympia unnattended because they are much harder to control while both outside, especially when they getting into barking fights with the neighbor dogs.
+<i class="fa-solid fa-triangle-exclamation"></i> 
 
-CJ has two primary types of barking habits in the backyard. 
-1. The one where he barks at the neighbor dogs and sounds scary. 
-2. The other is to bark into the wind; letting everyone know he's awake. He's just weird.
+CJ will often bark into the wind; letting everyone know he's awake. This will cause the neighbors dog to bark but he doesn't appear to notice unless Olympia is barking too.
 
 ### Inside
 CJ is actually really good about not looking for things to bark at while inside. He will begin barking when someone knocks at the door and can look very agressive to anyone who is at the door. He also barks when Olympia begins any sort of barking noises. Even if Olympia isn't barking at anything
