--- a/docs/pets/scout.mdx
+++ b/docs/pets/scout.mdx
@@ -18,8 +18,8 @@ When the weather is nice, and given the opportunity, she will sneak out of the b
 
 ## Litterbox
 
-Scout's litterbox is in the laundry room.
-Use the littergenie to dispose of her poops, or a trashbag. She will poop on the carpet if theres too much poop in the litterbox, and then she will blame the dogs for it.
+Scout's litterbox is in the small cupboard near the front door.
+Use the littergenie to dispose of her poops, or a trashbag. She will poop on the carpet if theres too much poop in the litterbox, and then she will blame the dogs for it. And then the dogs will clean it up for her. Just all bad things...
 
 ## Routine
 
@@ -27,7 +27,7 @@ Most days Scoutie just lays around in her favorite spots and eats. She will bug 
 
 ### Lounging
 
-Most of the time, she is found in her cat tree, or in the gym, near to her food. 
+Most of the time, she is found in her cat tree, or in the dining room, near to her food. 
 
 ### Avoiding confrontation
 
