--- a/docs/pets/pets.mdx
+++ b/docs/pets/pets.mdx
@@ -4,11 +4,7 @@ hide_title: true
 ---
 import PetCard from '@site/src/components/PetCard'
 import styles from '@site/src/pages/index.module.css'
-const pets = {
-  olympia: '2019/09/10',
-    cj: '2011/07/10',
-    scout: '2016/05/14',
-}
+
 
 # Pets
 
@@ -19,7 +15,7 @@ These are the pets
   href="/docs/pets/olympia"
   imagePath="/img/olympia.jpg"
   breed="Basenji Mix"
-  birthday={pets.olympia}
+  birthday="2019/09/10"
   children="Our little monster was born September 2018. She makes funny sounds and
   can have a ton of energy. We know that she is just the perfect little
   dog. Just over 40 pounds of pure muscle, don't let her crash into your
@@ -30,7 +26,7 @@ These are the pets
   href="/docs/pets/scout"
   imagePath="/img/scout.jpg"
   breed="cat"
-  birthday={pets.scout}
+  birthday='2016/05/14'
 >
   Scout was born in 2016 in a truck yard in Southern California. She came
   to our family as a tiny tiny cat and always ruled the house, until CJ
@@ -44,7 +40,7 @@ These are the pets
   href="/docs/pets/cj"
   imagePath="/img/cj.png"
   breed="German Shephard"
-  birthday={pets.cj}
+  birthday='2011/07/10'
 >
   CJ was born July 20 2011 and been a part of Tayler's family since birth.
   His parents, Chato and Molia, were part of Tayler's grandparents family
